temporary fix to image cutoff

--- a/src/components/Description/Description.module.scss
+++ b/src/components/Description/Description.module.scss
@@ -11,6 +11,7 @@
     color: $white;
     margin-top: 5em;
     margin-left: 8em;
+    margin-bottom: 5em;
 
     .title {
       font-size: 4em;
@@ -32,10 +33,13 @@
 
   .image {
     width: 50%;
+    position: relative;
 
     img {
       max-width: 100%;
       max-height: 100%;
+      position: absolute;
+      bottom: -1em;
     }
   }
 }
